fixed compilation errors